@@ -32,6 +32,7 @@ Andreas Wehrmann <a.wehrmann@centersystems.com>
 Eivind Sarto <ivan@espial.com>
 Thomas Stalder <gnunet@netsolux.ch>
 Zhimin Huang <zhimin.huang@bqvision.com>
+Jan Seeger <jan.seeger@thenybble.de>
 
 Documentation contributions also came from:
 Marco Maggi <marco.maggi-ipsu@poste.it>
